fix sidebar being too tall

--- a/app/assets/stylesheets/hera/modules/_sidebar.scss
+++ b/app/assets/stylesheets/hera/modules/_sidebar.scss
@@ -8,7 +8,7 @@ body:has(.main-sidebar.sidebar-collapsed) {
   border-right: 2px solid $border-color;
   position: sticky;
   top: $navbar-height;
-  height: calc(100vh - #{$navbar-height});
+  height: calc(100vh - (#{$navbar-height} * 2));
 
   .sidebar-content {
     display: flex;
